<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/>
    </parent>
    <groupId>st.orm</groupId>
    <artifactId>storm-framework</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>storm</module>
        <module>storm-json</module>
        <module>storm-mysql</module>
        <module>storm-mariadb</module>
        <module>storm-kotlin</module>
        <module>storm-spring</module>
    </modules>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>>${java.version}</maven.compiler.source>
        <maven.compiler.target>>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <kotlin.version>1.9.23</kotlin.version>
    </properties>
    <dependencyManagement>
        <dependencies>
<!--            <dependency>-->
<!--                <groupId>jakarta.persistence</groupId>-->
<!--                <artifactId>jakarta.persistence-api</artifactId>-->
<!--                <version>3.0.0</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>jakarta.annotation</groupId>-->
<!--                <artifactId>jakarta.annotation-api</artifactId>-->
<!--                <version>3.0.0</version>-->
<!--            </dependency>-->
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <source>${java.version}</source>
                            <target>${java.version}</target>
                            <release>${java.version}</release>
                            <compilerArgs>--enable-preview</compilerArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.5.0</version>
                        <configuration>
                            <failOnError>false</failOnError>
                            <source>{$java.version}</source>
                        </configuration>
                    </plugin>
                </plugins>
        </pluginManagement>
    </build>
</project>
